--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
    
     <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
 
+
+    <link rel="stylesheet" href="./assets/bootstrap-icons.css">
+
   </head>
   <body>
     <div id="app">
