--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8" />
     <title>Taisol</title>
     <!-- Import Styles -->
-    <link rel="stylesheet" href="./assets/styles.css" />
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
     <link rel="SHORTCUT ICON" href="./assets/images/logo.ico"   />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>    <!-- Import Vue.js -->
+<!--boostrap css
    
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>   
+    -->
+    
+    <link href="./assets/styles/bootstrap.min.css" rel="stylesheet">
+    <script src="./assets/js/bootstrap.bundle.js"></script>   
+   
+    <!-- Import Vue.js  <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script> -->
+   <script src="./assets/js/vue.global.js"></script>
+ 
+    
 
 
-    <link rel="stylesheet" href="./assets/bootstrap-icons.css">
+    <link rel="stylesheet" href="./assets/styles/bootstrap-icons.css">
 
   </head>
   <body>
