--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
 
-      <nav class="footer  navbar  navbar-expand-lg fixed-bottom  navbar-dark ">
+      <nav class="footer  navbar  navbar-expand-lg  navbar-dark ">
           <h5>Copyright ©2015 TaiSol Electronics Co., Ltd. All rights reserved</h5>  
         <div >
              
