--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <body>
     <div id="app">
 
-      <div class="nav-bar"></div>
+      <div class="nav-bar "></div>
       <nav class="navbar navbar-expand-lg navbar-dark ">
-        <div class="container-fluid">
+        <div class="container-fluid  ">
           <a class="navbar-brand" href="https://www.taisol.com"><img src='./assets/images/logo.png' /></a>
         
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -119,8 +119,8 @@
 
 
 
-      <nav class="footer  navbar  navbar-expand-lg  navbar-dark ">
-          <h5>Copyright ©2015 TaiSol Electronics Co., Ltd. All rights reserved</h5>  
+      <nav class="footer  navbar  navbar-expand-lg fixed-bottom  navbar-dark ">
+          <h6>Copyright ©2015 TaiSol Electronics Co., Ltd. All rights reserved</h6>  
         <div >
              
               <div class="footer-nav collapse navbar-collapse " id="navbarSupportedContent">
