--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
                   <li class="nav-item dropdown">
-                      <a   @mouseleave="mouseLeave('navbarDropdown4')" @mouseover="drop('navbarDropdown4')" ref="navbarDropdown4"  class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-bs-toggle="dropdown" aria-expanded="false" >
+                      <a   @mouseleave="mouseLeave('navbarDropdown4')" @mouseover="mouseOver('navbarDropdown4')" ref="navbarDropdown4"  class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-bs-toggle="dropdown" aria-expanded="false" >
                           利害關係人專區
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown4" ref="navbarDropdown4-1">
