--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Taisol</title>
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles/styles.css" />
-    <link rel="SHORTCUT ICON" href="./assets/images/logo.ico"   />
+    <link rel="icon" href="./assets/images/logo.ico"  type="image/x-icon" />
 
 <!--Import boostrap css
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
