--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
  
 </nav>
     <!-- Import App -->
-    <div id="app" ></div>
+    <div id="app" class="fixedbody" ></div>
 
 <script type="text/babel">
     const rootElement = document.getElementById('app')
