--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
     </div>
  
 </nav> 
+
+
+
 <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -218,7 +221,14 @@
     </ul>
 
   </div>
-</nav> -->    <!-- Import App -->
+</nav> -->
+
+
+
+
+<!-- try again-->
+
+    <!-- Import App -->
     <div id="app" class="fixedbody" ></div>
 
 <script type="text/babel">
@@ -349,10 +359,10 @@ class Page0 extends React.Component {
             this.setState(function(state,props){
                 if (state.tableExpanded==0) {
                     $('.collapseTable').collapse('show')
-                    $('.collapseTableButton').collapse('hide')
+                    // $('.collapseTableButton').collapse('hide')
                 }else{
                     $('.collapseTable').collapse('hide')
-                    $('.collapseTableButton').collapse('show')
+                    // $('.collapseTableButton').collapse('show')
                 }
                 return {
                     tableExpanded: (state.tableExpanded+1)%2  
@@ -363,12 +373,40 @@ class Page0 extends React.Component {
             
         };
 
+        renderButtonList(array,index,type){
+            if(array.length>1)
+             return  [<button class="btn btn-light dropdown-toggle  collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample"+type+index} aria-expanded="false" aria-controls={"collapseExample"+type+index}>
+             {array[0]}...
+             </button>,
+                                     <div class="collapse collapseTable" id={"collapseExample"+type+index}>
+                                     <div class="card card-body">
+                                         {array.map(     (detail) =>
+                                             <li type="disc" >
+                                                 {detail}
+                                             </li >
+                                         )}
+                                     </div>
+                                 </div>
+            ]
+            return <button class="btn btn-light  " type="button"  >
+            {array[0]}
+            </button>
+        }
+
         render() {
+
+            
+
             const table = this.props.data.map( (item,index) => [
                 <tr><td>{item.title}</td><td>{item.from}</td><td>{item.name}</td><td>{item.sex}</td><td>{item.start_date}</td><td>{item.duration}</td><td>{item.first_start_date}</td><td>{item.stock1}</td> <td>{item.stock_per1}</td> <td>{item.stock2}</td> <td>{item.stock_per2}</td> <td>{item.stock3}</td><td>{item.stock_per3}</td><td>{item.stock4}</td><td>{item.stock_per4}</td>
                     <td >
-                        <button class="btn btn-secondary dropdown-toggle btn-sm collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample0"+index} aria-expanded="false" aria-controls={"collapseExample0"+index}>
-                        </button>
+                        {this.renderButtonList(item.exps,index,0)}
+
+
+
+                        {/* <button class="btn btn-secondary dropdown-toggle btn-sm collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample0"+index} aria-expanded="false" aria-controls={"collapseExample0"+index}>
+                        {item.exps[0]}
+                        </button> 
                         <div class="collapse collapseTable" id={"collapseExample0"+index}>
                             <div class="card card-body">
                                 {item.exps.map(     (detail) =>
@@ -377,10 +415,13 @@ class Page0 extends React.Component {
                                     </li >
                                 )}
                             </div>
-                        </div>
+                        </div>*/}
                     </td>
                     <td>
-                        <button id={"collapseTableButton1"+index} class="btn btn-secondary dropdown-toggle btn-sm collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample1"+index} aria-expanded="false" aria-controls={"collapseExample1"+index}>
+                    {this.renderButtonList(item.other_titles,index,1)}
+
+                        {/* <button id={"collapseTableButton1"+index} class="btn btn-secondary dropdown-toggle btn-sm collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample1"+index} aria-expanded="false" aria-controls={"collapseExample1"+index}>
+                        {item.other_titles[0]}
                         </button>
                         <div class="collapse collapseTable" id={"collapseExample1"+index}>
                             <div class="card card-body">
@@ -390,7 +431,7 @@ class Page0 extends React.Component {
                                     </li >
                                 )}
                             </div>
-                        </div>
+                        </div> */}
                     </td>
                     <td>{item.relative_title}</td>
                     <td>{item.relative_name}</td>
@@ -688,19 +729,39 @@ function Page1(props) {
             this.setState({tableExpanded: (currentTableState+1)%2} ,function(){
                 if (this.state.tableExpanded) {
                     $('.collapseTable').collapse('show')
-                    $('.collapseTableButton').collapse('hide')
+                    // $('.collapseTableButton').collapse('hide')
                 }else{
                     $('.collapseTable').collapse('hide')
-                    $('.collapseTableButton').collapse('show')
+                    // $('.collapseTableButton').collapse('show')
                 }
             });
         };
-
+        renderButtonList(array,index,type){
+            if(array.length>1)
+             return  [<button class="btn btn-light dropdown-toggle  collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample"+type+index} aria-expanded="false" aria-controls={"collapseExample"+type+index}>
+             {array[0]}...
+             </button>,
+                                     <div class="collapse collapseTable" id={"collapseExample"+type+index}>
+                                     <div class="card card-body">
+                                         {array.map(     (detail) =>
+                                             <li type="disc" >
+                                                 {detail}
+                                             </li >
+                                         )}
+                                     </div>
+                                 </div>
+            ]
+            return <button class="btn btn-light  " type="button"  >
+            {array[0]}
+            </button>
+        }
         render() {
             const table = this.props.data.map( (item,index) => [
                 <tr><td>{item.title}</td><td>{item.from}</td><td>{item.name}</td><td>{item.sex}</td><td>{item.start_date}</td><td>{item.duration}</td><td>{item.first_start_date}</td><td>{item.stock1}</td> <td>{item.stock_per1}</td> <td>{item.stock2}</td> <td>{item.stock_per2}</td> <td>{item.stock3}</td><td>{item.stock_per3}</td><td>{item.stock4}</td><td>{item.stock_per4}</td>
                     <td>
-                        <button class="btn btn-secondary dropdown-toggle btn-sm collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample0"+index} aria-expanded="false" aria-controls={"collapseExample0"+index}>
+                    {this.renderButtonList(item.exps,index,0)}
+
+                        {/* <button class="btn btn-secondary dropdown-toggle btn-sm collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample0"+index} aria-expanded="false" aria-controls={"collapseExample0"+index}>
                         </button>
                         <div class="collapse collapseTable" id={"collapseExample0"+index}>
                             <div class="card card-body">
@@ -710,10 +771,12 @@ function Page1(props) {
                                     </li >
                                 )}
                             </div>
-                        </div>
+                        </div> */}
                     </td>
                     <td>
-                        <button id={"collapseTableButton1"+index} class="btn btn-secondary dropdown-toggle btn-sm collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample1"+index} aria-expanded="false" aria-controls={"collapseExample1"+index}>
+                    {this.renderButtonList(item.other_titles,index,1)}
+
+                        {/* <button id={"collapseTableButton1"+index} class="btn btn-secondary dropdown-toggle btn-sm collapseTableButton" type="button" data-toggle="collapse" data-target={"#collapseExample1"+index} aria-expanded="false" aria-controls={"collapseExample1"+index}>
                         </button>
                         <div class="collapse collapseTable" id={"collapseExample1"+index}>
                             <div class="card card-body">
@@ -723,7 +786,7 @@ function Page1(props) {
                                     </li >
                                 )}
                             </div>
-                        </div>
+                        </div> */}
                     </td>
                     <td>{item.relative_title}</td>
                     <td>{item.relative_name}</td>
@@ -3011,7 +3074,9 @@ function Page11(props) {
 </script>
 
 <!-- python-footer.html -->
-<nav class="footer  navbar  navbar-expand-lg fixed-bottom  navbar-dark fixedfooter">
+
+  
+  <nav class="footer  navbar  navbar-expand-lg fixed-bottom  navbar-dark fixedfooter">
     <div class="container-fluid">
       <div class="row" style="width: 100%">
         <div class="col-8">
@@ -3042,6 +3107,24 @@ function Page11(props) {
       </div>
     </div>
   </nav>
+ <!-- <div class="  navbar footer row  navbar-expand-lg fixed-bottom fixedfooter">
+     <div class="col-sm-8 ">
+      <p  >Copyright ©2015 TaiSol Electronics Co., Ltd. All rights reserved</p>
+      </div>
+    <div class="col-sm-4">
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a class="nav-link" href="http://www.104.com.tw/jobbank/custjob/index.php?r=cust&j=404a436c5a463f245a323c1d1d1d1d5f2443a363189j48&jobsource=n104bank1">加入泰碩</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.taisol.com/?lang=zh#">泰碩人園地</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.taisol.com/site-navigation?lang=zh">網站導覽</a>
+          </li>
+        </ul>
+      </div>
+</div> -->
 </body>
 
 </html>
