--- a/index.html
+++ b/index.html
@@ -23,9 +23,25 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> -->
 
+  <script>
+    function count() {
+  let targetUrl = 'w3.taisol.com.tw/group/cms/index.php/corporate_governance';
+let query = '?url=' + encodeURIComponent(targetUrl);
+let xmlHttp = new XMLHttpRequest();
+xmlHttp.withCredentials = true;
+xmlHttp.open('GET', 'https://hitcounter.pythonanywhere.com/nocount' + query, false);
+xmlHttp.send(null);
+count = xmlHttp.responseText;
+    alert(count);
+    console.log("count:",count);
+  }
+  </script>
 </head>
+  
+  
+  
 
-<body > <!--style="width:2200px;overflow:auto;" -->
+<body onload="count()" > <!--style="width:2200px;overflow:auto;" -->
     <!-- python-header.html -->
 <!-- <div class="navbar">
 
