--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
   <script>
     function count() {
-  let targetUrl = 'http://w3.taisol.com.tw/group/cms/index.php/corporate_governance';
+//   let targetUrl = 'http://w3.taisol.com.tw/group/cms/index.php/corporate_governance';
+  let targetUrl = 'chen116.github.io';
 let query = '?url=' + encodeURIComponent(targetUrl);
 let xmlHttp = new XMLHttpRequest();
 xmlHttp.withCredentials = true;
@@ -135,7 +136,7 @@ count = xmlHttp.responseText;
      
     <a class="navbar-brand" href="https://www.taisol.com"><img src='./assets/images/logo.png' /></a>
     <h3 style="color: white; "> <span>&nbsp;&nbsp;</span>公司治理 </h3>
- <!-- <img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits"> -->
+
 
    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
