--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script>
     function count() {
 //   let targetUrl = 'http://w3.taisol.com.tw/group/cms/index.php/corporate_governance';
-  let targetUrl = 'chen116.github.io';
+  let targetUrl = 'https://chen116.github.io/';
 let query = '?url=' + encodeURIComponent(targetUrl);
 let xmlHttp = new XMLHttpRequest();
 xmlHttp.withCredentials = true;
