--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
   <script>
     function count() {
+      console.log("counting:");
+  }
 //   let targetUrl = 'http://w3.taisol.com.tw/group/cms/index.php/corporate_governance';
   let targetUrl = 'https://chen116.github.io/';
 let query = '?url=' + encodeURIComponent(targetUrl);
