--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ $.ajax('https://hitcounter.pythonanywhere.com/count', {
   
   
 
-<body onload="count()" > <!--style="width:2200px;overflow:auto;" -->
+<body  > <!--style="width:2200px;overflow:auto;" -->
     <!-- python-header.html -->
 <!-- <div class="navbar">
 
